test/corpus/all-tokens.txt
=====
_untested
=====

--cmd command
--remap package:target
--macro macro
-C directory
--cwd directory
--haxelib-global
--dce std
--dce full
--dce no
--xml file
--json file
--swf-version version
--swf-header header
--flash-strict
--swf-lib file
--swf-lib-extern file
--java-lib file
--java-lib-extern file
--net-lib file
--net-lib file@std
--net-std file
--c-arg arg

===
C arg
===

--c-arg arg

---

(hxml
    (c_arg (flag) (text))
)


=====
Cmd
=====

--cmd out/TestMain

---

(hxml
    (cmd (flag) (text))
)

=====
Class Path
=====

-cp path
-p path
--class-path path

---

(hxml
    (class_path (flag) (text))
    (class_path (flag) (text))
    (class_path (flag) (text))
)

======
Connect
======

--connect 0000
--connect host:0000

---

(hxml
    (connect (flag) (number))
    (connect (flag) (text) (number))
)

===
CWD
===

-C directory
--cwd directory/sub

---

(hxml
    (cwd (flag) (text))
    (cwd (flag) (text))
)

======
Define
======

-D var
-D var=value
--define var
--define var=value

---

(hxml
    (define (flag) (text))
    (define (flag) (text) (value))
    (define (flag) (text))
    (define (flag) (text) (value))
)

=======
Library
=======

-L name
-L name:0.0.0
--library name
--library name:0.0.0
--library instrument:git:https://github.com/AlexHaxe/haxe-instrument
--library utest:git:https://github.com/haxe-utest/utest#f759c0aa257aa723b3dd607cf7cb53d16194d13f

---

(hxml
    (library (flag) (identifier))
    (library (flag) (identifier) (version))
    (library (flag) (identifier))
    (library (flag) (identifier) (version))
    (library (flag) (identifier) (git_url))
    (library (flag) (identifier) (git_url) (git_ref))
)

=====
Main
=====

-m class
--main class

---

(hxml
    (main (flag) (text))
    (main (flag) (text))
)

=====
Macros
=====

--macro nullSafety("sys", StrictThreaded)

---

(hxml
    (macro (flag) (haxe_expression))
)

======
Output
======

--js file
--lua file
--swf file
--neko file
--php directory
--cpp directory
--cppia file
--cs directory
--java directory
--jvm file
--python file
--hl file
--interp
--run module
--run module arg
--run module arg arg arg

---

(hxml
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag) (text))
    (output (flag))
    (output (flag) (text))
    (output (flag) (text) (text))
    (output (flag) (text) (text) (text) (text))
)

======
Resource
======

-r file
-r file@name
--resource file
--resource file@name

---

(hxml
    (resource (flag) (text))
    (resource (flag) (text) (text))
    (resource (flag) (text))
    (resource (flag) (text) (text))
)

=====
Server Connect
=====

--server-connect
--server-connect 0000
--server-connect host:0000

---

(hxml
    (server_connect (flag))
    (server_connect (flag) (number))
    (server_connect (flag) (text) (number))
)

=====
Server Listen
=====

--server-listen
--server-listen 0000
--server-listen host:0000
--server-listen stdio

---

(hxml
    (server_listen (flag))
    (server_listen (flag) (number))
    (server_listen (flag) (text) (number))
    (server_listen (flag))
)

===
XML
===

--xml file.xml

---

(hxml
    (types_desc (flag) (text))
)

===
JSON
===

--json file.json

---

(hxml
    (types_desc (flag) (text))
)
