test/corpus/haxe-doc-examples.txt
==========
Example #1
==========

--class-path src
--dce full
--js bin/homepage.js
--main website.HomePage

---

(hxml
    (class_path (flag) (text))
    (dce (flag))
    (output (flag) (text))
    (main (flag) (text))
)

==========
Example #2
==========

--class-path src
--dce full

--each

--js bin/homepage.js
--main website.HomePage

--next

--js bin/gallery.js
--main website.GalleryPage

--next

--js bin/contact.js
--main website.ContactPage

---

(hxml
    (class_path (flag) (text))
    (dce (flag))
    (each)

    (output (flag) (text))
    (main (flag) (text))
    (next)

    (output (flag) (text))
    (main (flag) (text))
    (next)

    (output (flag) (text))
    (main (flag) (text))
)

=========
Example #3
=========

build-server.hxml
--next
build-website.hxml
--next
build-game.hxml

---

(hxml
    (hxml_file)
    (next)
    (hxml_file)
    (next)
    (hxml_file)
)
