test/corpus/mixed.txt
==========
Mixed LSP config #1
==========

--class-path src
--class-path samples/hello_world/src

--cpp out
--no-output

--library instrument
--library utest:1.13.2
--library foo:git:https://github.com/User/foo
--library bar:git:https://github.com/User/bar#tag

--macro nullSafety("sys", StrictThreaded)

---

(hxml
    (class_path (flag) path: (text))
    (class_path (flag) path: (text))
    (output (flag) directory: (text))
    (output (flag))
    (library (flag) name: (identifier))
    (library (flag) name: (identifier) version: (version))
    (library (flag) name: (identifier) url: (url))
    (library (flag) name: (identifier) url: (url) ref: (text))
    (macro (flag) expression: (haxe_expression))
)

==========
Mixed LSP config #2
==========

-cp tests
-main Test
--define no-deprecation-warnings
--macro nullSafety("foobar._internal.ds", StrictThreaded)
-hl test.hl
---

(hxml
    (class_path (flag) path: (text))
    (main (flag) class: (text))
    (define (flag) var: (text))
    (macro (flag) expression: (haxe_expression))
    (output (flag) file: (text))
)
